--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
 <body>
     <h1>People Entered: </h1>
     <h2 id="count-el">0</h2>
-    <script>
-        document.getElementById("count-el").innerText = 5
-    </script>
+    <script src="assets/script/index.js"></script>
 </body>
 </html>
