--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>People Entered: </h1>
     <h2 id="count-el">0</h2>
     <button id="increment-btn" onclick="increment()">INCREMENT</button>
+    <button id="log-btn" onclick="logger()">LOG</button>
     <script src="assets/script/index.js"></script>
 </body>
 </html>
