added reset button

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
     <h1>People Entered: </h1>
     <h2 id="count-el">0</h2>
-    <button id="increment-btn" onclick="increment()">INCREMENT</button>
-    <button id="log-btn" onclick="logger()">LOG</button>
+    <button onclick="increment()">INCREMENT</button>
+    <button onclick="logger()">LOG</button>
+    <button onclick="reset()">RESET</button>
     <script src="assets/script/index.js"></script>
 </body>
 </html>
